--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "2.4.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/yup": "^0.32.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
+    "helmet": "^6.0.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "socket.io": "^4.5.4",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   }
 }
