--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/yup": "^0.32.0",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
-    "helmet": "^6.0.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
