--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@types/yup": "^0.32.0",
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.1",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.5.4",
     "typescript": "4.9.4",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/pg": "^8.6.6"
   }
 }
